<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#92a1a7">


    <EditText
        android:id="@+id/text_num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:hint="@string/txt_num1"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/text_num2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.712"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/txt_num2"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.712"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_num1" />

    <Button
        android:id="@+id/bsuma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:hint="@string/bsuma"
        android:onClick="Sumar"
        android:text="SUMAR"
        android:textColor="#090909"
        android:textColorHighlight="#E91E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_num2" />

    <TextView
        android:id="@+id/text_Resultado"
        android:layout_width="112dp"
        android:layout_height="67dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:hint="@string/txt_Resultado"
        android:text="Resultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.591"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bdivision" />

    <Button
        android:id="@+id/bresta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/bresta"
        android:onClick="Restar"
        android:text="RESTAR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bsuma" />

    <Button
        android:id="@+id/bmultiplicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/bmultiplicacion"
        android:onClick="Multiplicar"
        android:text="MULTIPLICAR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bresta" />

    <Button
        android:id="@+id/bdivision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/bdivision"
        android:onClick="Dividir"
        android:text="DIVIDIR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmultiplicacion" />


</androidx.constraintlayout.widget.ConstraintLayout>